# metaproj

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .deepsource.toml  .editorconfig  .fixit.config.yaml  .gitignore  .pre-commit-config.yaml  .pyre_configuration  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  changesets.py  invoke.yaml  ip.json  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  style_bas  tasks.py  tox.ini  wily-report.html
.github/workflows/: annotate.yml  pythonapp.yml
Journal2024/: 2024-07-03-14-05-51.md  Title.md  TitleOne.md
data/: git_config_vars.json  pretty.py
data/bookutils/: PrettyTable.py  set_fixed_seed.py
data/ipypublish/export_plugins/: html_ipypublish_main.py  html_standard.py  latex_ipypublish_main.py  nb_ipypublish_nocode.py  slides_ipypublish_main.py  slides_mkdown_main.py  slides_mkdown_nocode.py  slides_standard.py
data/ipypublish/filters/: ansi_listings.py  replace_string.py
data/ipypublish/preprocessors/: crop_cells.py  latex_doc_links.py
data/ipypublish/scripts/: export_plugins.py  nbexport.py  nbmerge.py  pdfexport.py
data/nbconvert_dev/: __init__.py  nbconvertapp.py
data/nbconvert_dev/exporters/: __init__.py  exporter.py
data/nbconvert_dev/preprocessors/: csshtmlheader.py
data/utils/: add_metadata.py  bnfize  htmltonbpdf.py  nbautopep8.py  nbmerge.py  nbspellcheck.py  nbsummarize.py  nbtoc.py  post_html.py
docs/: Makefile  README.md
docs/includes/: setuptools_keywords.rst  setuptools_keywords_toml_format.toml
docs/reference/: index.rst  metaproj.rst
docs/source/: conf.py  installation.rst  requirements.txt  usage.rst
other/bookutils/: __init__.py  import_notebooks.py
other/ipypublish/: __init__.py  main.py  test_main.py
other/ipypublish/export_plugins/: html_ipypublish_all.py  html_ipypublish_nocode.py  latex_ipypublish_all.py  latex_ipypublish_nocode.py  latex_standard_article.py  nb_ipypublish_all.py  slides_ipypublish_all.py  slides_ipypublish_nocode.py  slides_mkdown_all.py
other/ipypublish/filters/: filters.py
other/ipypublish/html/: create_tpl.py
other/ipypublish/latex/: create_tplx.py
other/ipypublish/preprocessors/: latex_doc_captions.py  latex_doc_defaults.py  latex_doc_html.py  latextags_to_html.py  slides_from_markdown.py  split_outputs.py
other/ipypublish/scripts/: ipynb_latex_setup.py  reveal_serve.py
other/nbconvert_dev/exporters/: templateexporter.py
other/nbconvert_dev/preprocessors/: __init__.py
other/utils/: nbautoslide.py  nbdepend.py  nbindex.py  nbshorten.py  nbstats.py  nbsynopsis.py
src/: config.py
src/metaproj/: __init__.py  __main__.py  cli.py
src/metaproj/_scratch/: __run_decos__.py
src/metaproj/common/: __init__.py  autofix.py  base.py  config.py  config.schema.json  exceptions.py  full_repo_metadata.py  misc.py  path_utils.py  report.py  testing.py  utils.py
src/metaproj/rules/: __init__.py  avoid_or_in_except.py  chained_instance_check.py  cls_in_classmethod.py  compare_primitives_by_equal.py  compare_singleton_primitives_by_is.py  explicit_frozen_dataclass.py  gather_sequential_await.py  import_constraints.py  no_assert_equals.py  no_assert_true_for_comparison.py  no_implicit_concat.py  no_inherit_from_object.py  no_namedtuple.py  no_redundant_arguments_super.py  no_redundant_fstring.py  no_redundant_lambda.py  no_redundant_list_comprehension.py  no_static_if_condition.py  no_string_type_annotation.py  no_typed_dict_rule.py  replace_union_with_optional.py  rewrite_to_comprehension.py  (+8 more)
src/settings/: settings.toml
tests/: conftest.py  test_autofix.py  test_config.py  test_full_repo_metadata.py  test_metaproj.py  test_report.py
todo/: .fixit.config.yaml  __init__.py  change.py  changesets.py  codeanalyze.py  exceptions.py  fscommands.py  history.py  project.py  resourceobserver.py  resources.py  taskhandle.py
tools/: gh_api.py
(+28 files in other folders)
