[metadata]
name = metaproj
platforms = any

[options]
zip_safe = False

install_requires =
    importlib-metadata; python_version<"3.8
    attrs
    click
    pydantic

[options.extras_require]
testing =
	pytest-cov
	pytest
	hypothesis

[options.entry_points]

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = */migrations/*

[tool:pytest]
testpaths = tests
norecursedirs =
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

[isort]
force_single_line = True
line_length = 120

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.0.1rc2
package = metaproj
